welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:7: error: not found: value Direction
    setDirection(dir:Direction.EAST)
                     ^DwarfCode:7: error: not found: value dir
    setDirection(dir:Direction.EAST)
                 ^DwarfCode:10: error: not found: value Direction
    setDirection(dir:Direction.WEST)
                     ^DwarfCode:10: error: not found: value dir
    setDirection(dir:Direction.WEST)
                 ^DwarfCode:11: error: value unary_! is not a member of Int
    while ((!estSurBiscuit()) && (!getX()==0)) avance()
                                  ^