welcome.lessons.welcome.summative.Moria.scala.code
def positionFinale : Boolean = {
  return getX()==getMondeLargeur()-3
}

def moria = {
  while ((!positionFinale) && (!estSurBiscuit())) {
    setDirection(dir:Direction.EAST)
    while ((!estSurBiscuit()) && (!positionFinale)) avance()
    prendBiscuit()
    setDirection(dir:Direction.WEST)
    while ((!estSurBiscuit()) && (!getX()==0)) avance()
    recule()
    poseBiscuit()
    recule()
  }
  while (!positionFinale) avance()
  droite();avance();gauche();avance()
}